--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
 	margin: 0 auto;
 	padding: 2em;
 	font-size: 16px;
-	background-color: #ede0df;
+	background-color: #fff;
 	border-radius: 2em;
 }
 .chat-content {
@@ -36,7 +36,7 @@
 		}
 	}
 	.chat-box {
-		background-color: #fff;
+		background-color: #ffecec;
 		padding: 0.8em;
 		border-radius: 0.5em;
 		max-width: 200px;
